fix: form half-width fields when wrapped

--- a/public/builder/scss/form.scss
+++ b/public/builder/scss/form.scss
@@ -21,8 +21,11 @@
         position: relative;
         &+td
         {
-          padding-left: 1.6rem;
-          .table-info { left: 3.2rem; }
+          @media (min-width: 768px)
+          {
+            padding-left: 1.6rem;
+            .table-info { left: 3.2rem; }
+          }
         }
         input { appearance: none; }
         .table-info, input, select
